==============
lxml changelog
==============

Latest changes
==============

Features added
--------------

* ``cleanup_namespaces()`` accepts a new argument ``top_nsmap`` that
  moves definitions of the provided prefix-namespace mapping to the
  top of the tree.

* API functions and methods behave and look more like Python functions,
  which allows introspection on them etc.  One side effect to be aware of
  is that the functions now bind as methods when assigned to a class
  variable.  A quick fix is to wrap them in ``staticmethod()`` (as for
  normal Python functions).

* ISO-Schematron support gained an option ``error_finder`` that allows
  passing a filter function for picking validation errors from reports.

* LP#1243600: Elements in ``lxml.html`` gained a ``classes`` property
  that provides a set-like interface to the ``class`` attribute.
  Original patch by masklinn.

* LP#1341964: The soupparser now handles DOCTYPE declarations, comments
  and processing instructions outside of the root element.
  Patch by Olli Pottonen.

* LP#1421512: The ``docinfo`` of a tree was made editable to allow
  setting and removing the public ID and system ID of the DOCTYPE.
  Patch by Olli Pottonen.

* LP#1442427: More work-arounds for quirks and bugs in pypy and pypy3.

Bugs fixed
----------

* Memory errors that occur during tree adaptations (e.g. moving subtrees
  to foreign documents) could leave the tree in a crash prone state.

* GH#159: Validity checks for names and string content were tightened
  to detect the use of illegal characters early.  Patch by Olli Pottonen.

* LP#1421921: Comments/PIs before the DOCTYPE declaration were not
  serialised.  Patch by Olli Pottonen.

* LP#659367: Some HTML DOCTYPE declarations were not serialised.
  Patch by Olli Pottonen.

* LP#1238503: lxml.doctestcompare is now consistent with stdlib's doctest
  in how it uses ``+`` and ``-`` to refer to unexpected and missing output.
