@@ -8,6 +8,10 @@ Latest changes
 Features added
 --------------
 
+* ``cleanup_namespaces()`` accepts a new argument ``keep_nsmap`` that
+  does not remove definitions of the provided prefix-namespace mapping
+  from the tree, moving them to the top of the tree.
+
 * ``cleanup_namespaces()`` accepts a new argument ``top_nsmap`` that
   moves definitions of the provided prefix-namespace mapping to the
   top of the tree.
